# YoloNexusCpp

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md  YoloNexus.slnx  YoloNexus.vcxproj  YoloNexus.vcxproj.filters  config.txt  vcpkg.json
ports/onnxruntime-directml/: portfile.cmake  vcpkg.json
src/app/: console_app.cpp  console_app.h  console_dashboard.cpp  console_dashboard.h  main.cpp
src/application/: app_settings.cpp  app_settings.h  config_file.cpp  config_file.h  runtime_controller.cpp  runtime_controller.h  runtime_snapshot.h
src/core/: ema.h  timing.cpp  timing.h  types.h
src/core/capture/: camera_capture.cpp  camera_capture.h  capture_source.h  screen_capture.cpp  screen_capture.h  source_catalog.cpp  source_catalog.h  window_capture.cpp  window_capture.h
src/core/display/: d3d_display.cpp  d3d_display.h  preview_window.cpp  preview_window.h
src/core/hardware/: cpu_monitor.cpp  cpu_monitor.h  gpu_monitor.cpp  gpu_monitor.h  memory_monitor.cpp  memory_monitor.h  system_info.cpp  system_info.h
src/core/inference/: amd_neural_runner.cpp  amd_neural_runner.h  class_metadata.cpp  class_metadata.h  input_preprocessing.cpp  input_preprocessing.h  onnxruntime_loader.cpp  onnxruntime_loader.h  yolo_inference.cpp  yolo_inference.h
src/core/overlay/: overlay.cpp  overlay.h
src/core/pipeline/: fps_statistics.cpp  fps_statistics.h  pipeline_state.h  workers.cpp  workers.h
src/core/platform/: utf8.cpp  utf8.h
tests/: config_tests.cpp  fps_statistics_tests.cpp  inference_benchmark.cpp  input_preprocessing_tests.cpp  onnxruntime_loader_tests.cpp  source_catalog_tests.cpp
